Replace CrudRepository with JpaRepository for job type